--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lodash": "^4.17.11",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "springy": "^2.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
